@@ -13,7 +13,8 @@ export("Adobe_glyphs", "HTMLheader", "Rd2HTML", "Rd2ex", "Rd2latex",
        "file_path_as_absolute", "file_path_sans_ext", "findHTMLlinks",
        "getDepList", "installFoundDepends", "latexToUtf8",
        "list_files_with_exts", "list_files_with_type", "md5sum",
-       "package.dependencies", "parseLatex", "parse_Rd", "pkgDepends",
+       "package.dependencies", "package_dependencies", "parseLatex", 
+       "parse_Rd", "pkgDepends",
        "pkgVignettes", "pskill", "psnice", "read.00Index", "readNEWS",
        "resaveRdaFiles", "showNonASCII", "showNonASCIIfile",
        "startDynamicHelp", "testInstalledBasic",
